<resources>
    <string name="app_name">Daily Work</string>
    <!--股票-->
    <string name="hr_china">中国华融</string>
    <string name="lowest_rise">
        <Data>
            <![CDATA[
                <font color="#ff000000">最低</font><font color="#FF1CDE13"> %1$3</font>
            ]]>
        </Data>
    </string>
    <string name="highest_rise">
        <Data>
            <![CDATA[
                <font color="#ff000000">最高</font><font color="#FF1CDE13"> %1$3</font>
            ]]>
        </Data>
    </string>
    <string name="today_open_quotation">
        <Data>
        <![CDATA[
                <font color="#ff000000">今开</font><font color="#FF1CDE13"> %1$3</font>
            ]]>
        </Data>
    </string>
    <string name="yesterday_income">昨收 %1$3</string>
    <string name="stock_code">02799.港元</string>
    <string name="title_activity_intent_camera_ui">IntentCamera</string>
    <string name="title_activity_auto_switch_view">AutoSwitchView</string>
    <string name="hello_world">hello world</string>
    <!--device admin-->
    <string name="open_device_admin">Open Device Admin</string>
    <string name="settings_device_admin_desc">super device manager</string>
    <string name="stop_device_admin">Stop Device Admin</string>
    <string name="active_device_admin">请激活设备管理器</string>
    <string name="activated">已激活</string>
    <string name="not_activated">未激活</string>
    <string name="way_of_lock">Way Of Lock</string>
    <string name="lock_now">Lock Now</string>
    <string name="lock_delay">Lock Delay</string>
    <string name="reset_device">Reset Device</string>
    <string name="forbid_using_camera">Forbid Using Camera</string>
    <string name="reset_password">Reset Password</string>
    <string name="encrypt_storage">Encrypt Storage</string>
    <string name="disable_camera">Disable Camera</string>
    <string name="enable_camera">Enable Camera</string>
    <!--accounts-->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="common_account_type">com.sleticalboy.dailywork</string>
    <string name="routine_account_type">com.sleticalboy.dailywork.routines</string>
    <string name="routine_authority">com.sleticalboy.dailywork.routines</string>
    <string name="account_authority">com.sleticalboy.dailywork.contacts</string>
    <string name="authenticator_label">Daily Work</string>
    <string name="contacts_provider_label">Contacts</string>
    <string name="routines_provider_label">Routines</string>
    <!--debug-->
    <string name="open_settings">Open Settings</string>
    <string name="layout_bounds">Open Layout Bounds</string>
    <!-- bluetooth -->
    <string name="bt_start_scan">Start Scan</string>
    <string name="bt_stop_scan">Stop Scan</string>
    <string name="bt_connect">Connect</string>
    <string name="type_common">common bt</string>
    <string name="type_ble">BLE</string>
    <!-- notification -->
    <string name="notify_with_progress">Notify With Progress</string>
    <string name="notify_delay_with_light">Notify Delay With Light</string>
    <string name="show_dialog">show dialog</string>
    <string name="full_screen">full screen</string>
</resources>
